# cudalesson

./: .gitignore
3.1lesson/: matrixSum1D_CPU.cu  matrixSum1D_GPU.cu  setDevice.cu
3.2lesson/: errorCheckFunction.cu
3.3leson/: eventRecordTime.cu  nvprofAnalysis.cu
3.4lesson/: coresCount.cu  query.cu
3.5lesson/: grid1D_block1D.cu  grid2D_block1D.cu  grid2D_block2D.cu
4.10lesson/src/: main.cpp  matmul_gpu_basic.cu  reduce_cpu.cpp  timer.cpp  utils.cpp
4.4lesson/: CMakeLists.txt  global_memory.cu
4.5lesson/: CMakeLists.txt  common.cuh  dynamic_shared_memory.cu  static_shared_memory.cu
4.6lesson/: CMakeLists.txt  common.cuh  constant_memory.cu
4.7lesson/: CMakeLists.txt  GPU_cache.cu
4.8lesson/: CMakeLists.txt  queryInfo.cu
5.1cudacompiler/: x.cu  y.cu  y.h
5.2dynamiclibrary/: test.c
5.2dynamiclibrary/staticlib/: hello.c  hello.h
